--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@iconify/react": "^5.0.2",
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.7",
+    "@tanstack/react-query": "^5.60.2",
     "apexcharts": "^3.52.0",
+    "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "history": "^5.3.0",
     "react": "^18.3.1",
@@ -43,6 +45,7 @@
     "simplebar-react": "^3.2.6"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.60.1",
     "@types/node": "^22.5.0",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
